fixed extra space, delete unneeded css class names

--- a/src/summary/LongitudinalTable.scss
+++ b/src/summary/LongitudinalTable.scss
@@ -13,12 +13,11 @@
     text-overflow: ellipsis !important;
     overflow: hidden !important;
     white-space: nowrap !important;
-    &.hoverable {
-        &:hover {
-            color: #028dea !important;
-            cursor: pointer !important;
-            background-color: $feature-gray !important;
-        }
+    &:hover {
+        color: #028dea !important;
+        cursor: pointer !important;
+        background-color: $feature-gray !important;
+    }
     }
 }
 .star-clicked {
